# CppPkmGen

./: .gitignore  CMakeLists.txt  CppPkmGen.sln  README.md
CppPkmGen/: CppPkmGen.cpp  CppPkmGen.vcxproj  CppPkmGen.vcxproj.filters  DamageCaluclator.cpp  DamageCaluclator.h  Move.cpp  NumberGenerator.cpp  NumberGenerator.h  Pokemon.cpp  Pokemon.h  Tackle.cpp  Tackle.h  Trainer.cpp  Trainer.h
CppPkmGen/Moves/: AllMoves.h  Move.h  Tackle.cpp  Tackle.h  WaterGun.cpp  WaterGun.h
CppPkmTests/: CppPkmTests.cpp  CppPkmTests.vcxproj  CppPkmTests.vcxproj.filters  MainlineTests.cpp
